--- a/CleanArchitecture.WebApi/appsettings.json
+++ b/CleanArchitecture.WebApi/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "PostgreSQLServer": "Host=localhost;Database=CleanArchitectureDb;Username=postgres;Password=123456"
     }
-  },
-  "AllowedHosts": "*"
 }
